<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>pt.trainings.maven</groupId>
    <artifactId>gameGO</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- ===================================================== -->
    <!-- PROPERTIES -->
    <!-- ===================================================== -->
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <javafx.version>21</javafx.version>
    </properties>

    <!-- ===================================================== -->
    <!-- DEPENDENCIES -->
    <!-- ===================================================== -->
    <dependencies>


        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version> 21</version>
        </dependency>

        <!-- JUnit 4 -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.8.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- ===================================================== -->
    <!-- PROFILES -->
    <!-- ===================================================== -->
    <profiles>

        <!-- SERVER -->
        <profile>
            <id>server</id>
            <properties>
                <exec.mainClass>pl.edu.go.server.MatchmakingServer</exec.mainClass>
            </properties>
        </profile>

        <!-- CLIENT -->
        <profile>
            <id>client</id>
            <properties>
                <exec.mainClass>pl.edu.go.client.GoClient</exec.mainClass>
            </properties>
        </profile>

        <!-- JAVAFX PANEL (PLANSZA GO) -->
        <profile>
            <id>panel</id>
            <properties>
                <exec.mainClass>pl.edu.go.client.GoBoardDemo</exec.mainClass>
            </properties>
        </profile>

    </profiles>

    <!-- ===================================================== -->
    <!-- BUILD -->
    <!-- ===================================================== -->
    <build>
        <plugins>

            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>

                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>

                    <!-- ARGUMENTY PROGRAMU -->
                    <arguments>
                        <argument>5000</argument>
                    </arguments>

                    <!-- OPCJE JVM (JavaFX) -->
                    <commandlineArgs>
                        --module-path
                        C:/Users/jedre/Downloads/openjfx-21_windows-x64_bin-sdk/javafx-sdk-21/lib
                        --add-modules
                        javafx.controls,javafx.fxml
                    </commandlineArgs>
                </configuration>
            </plugin>



            <!-- Surefire (JUnit4) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
